--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,20 @@
     <string name="import_certificates">Import Certificates (CSV)</string>
     <string name="export_certificates">Export Certificates (CSV)</string>
 
+    <!-- Student Details -->
+    <string name="student_details">Student Details &amp; Certificates</string>
+    <string name="certificate_name">Certificate Name</string>
+    <string name="date">Date</string>
+
+    <string name="student_profile">Student Profile</string>
+    <string name="name">Name: </string>
+    <string name="id">ID: </string>
+    <string name="cla_ss">Class: </string>
+    <string name="certificates">Certificates</string>
+    <string name="add">+ Add</string>
+
+    <string name="edit_certificate">Edit Certificate</string>
+    <string name="delete_certificate">Delete Certificate</string>
+
 
 </resources>
